<resources>
  <string name="greeting">Hello, world!</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="neither_label">Neither</string>
  <string name="fizz_title">Fizz</string>
  <string name="buzz_title">Buzz</string>
  <string name="fizz_buzz_label">Fizz Buzz</string>
  <string name="start_game">Start Game</string>
  <string name="num_rounds_title">Number of rounds per game</string>
  <string name="num_rounds_key">num_rounds</string>
  <string name="time_limit_title">Number of seconds per round</string>
  <string name="time_limit_key">time_limit</string>
  <string name="digit_length_key">digit_length</string>
  <string name="digit_length_title">Difficulty level</string>
  <string name="digit_length_summary">Maximum number of strings displayed in values</string>
  <string name="settings_label">Settings</string>
</resources>